syntax = "proto3";

package billing;

service BillingService {
  rpc CreateBill (CreateBillRequest) returns (BillResponse);
  rpc GetBillById (GetBillByIdRequest) returns (BillResponse);
  rpc UpdateBillStatus (UpdateBillStatusRequest) returns (BillResponse);
  rpc DeleteBill (DeleteBillRequest) returns (DeleteBillResponse);
  rpc ListBillsByUser (ListBillsByUserRequest) returns (ListBillsByUserResponse);
}

message BillResponse {
  int32 id = 1;
  string userUuid = 2;
  string billStatus = 3;
  int32 amount = 4;
  string createdAt = 5;
  string paidAt = 6;
}

message CreateBillRequest {
  string userUuid = 1;
  string billStatus = 2;
  int32 amount = 3;
}

message GetBillByIdRequest {
  int32 id = 1;
}

message UpdateBillStatusRequest {
  int32 id = 1;
  string billStatus = 2;
}

message DeleteBillRequest {
  int32 id = 1;
}

message ListBillsByUserRequest {
  string userUuid = 1;
  string billStatus = 2;
}

message User{
  string uuid = 1;
  string name = 2;
  string lastName = 3;
}

message DeleteBillResponse {
  string message = 1;
}

message ListBillsByUserResponse {
  repeated BillResponse bills = 1;
}

message Check {
  string message = 1;
}